W04 - Add GitHub OAuth authentication
